--- a/productspage/pagescode/monitorscode/monitors-2K30.html
+++ b/productspage/pagescode/monitorscode/monitors-2K30.html
@@ -26,7 +26,43 @@
         </div>
     </section>
     <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="Monitors/30inch/2k-30-Black.webp" width ="100%" id="normal" alt ="">
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="Monitors/30inch/2k-30-Black.webp" width="100%" class="smallimg" id="black">
+                </div>
+                <div class="secimagescols">
+                    <img src="Monitors/30inch/2k-30-White.webp" width="100%" class="smallimg" id="white">
+                </div>
 
+            </div>
+        </div>
+        <div class="maindescription">
+            <br>
+           <h4 id="pname">30 Inch Black Monitor 2K</h4>
+           <br>
+           <h2 id="pprice"><del>£199.99</del> £149.99 </h2>
+           <br>
+           <select id="colourselector"> 
+            <option value="Black">Black </option>
+            <option value="White">White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4 id="pdescriptionheading" >Product Description: 30 Inch Black Monitor 2K</h4>
+           <br>
+           <span id="pdescription">Experience unparalleled clarity with this 30-inch 2K monitor, offering a vibrant 2560 x 1440 resolution for crystal-clear visuals. Designed with productivity and entertainment in mind, its expansive screen provides ample space for multitasking and immersive viewing. The elegant black finish and slim bezel design add a modern touch to any workspace or gaming setup. Featuring a fast refresh rate, wide viewing angles, and versatile connectivity options, this monitor is built to deliver premium performance for work or play.</span>
+        </div>
+        
+
+    </section>
     <hr>
     <footer class="">
 
@@ -98,6 +134,6 @@
 
 
     </footer>
-    <!--This is a comment -->
+    <script src="monitorscript.js"></script>
 </body>
 </html>
