--- a/productspage/pagescode/monitorscode/monitors-4K30.html
+++ b/productspage/pagescode/monitorscode/monitors-4K30.html
@@ -27,7 +27,43 @@
         </div>
     </section>
     <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="Monitors/30inch/4k-30-Black.webp" width ="100%" id="normal" alt ="">
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="Monitors/30inch/4k-30-Black.webp" width="100%" class="smallimg" id="black">
+                </div>
+                <div class="secimagescols">
+                    <img src="Monitors/30inch/4k-30-White.webp" width="100%" class="smallimg" id="white">
+                </div>
 
+            </div>
+        </div>
+        <div class="maindescription">
+            <br>
+           <h4 id="pname">30 Inch Black Monitor 4K</h4>
+           <br>
+           <h2 id="pprice"><del>£249.99</del> £199.99 </h2>
+           <br>
+           <select id="colourselector"> 
+            <option value="Black">Black </option>
+            <option value="White">White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4 id="pdescriptionheading" >Product Description: 30 Inch Black Monitor 4k</h4>
+           <br>
+           <span id="pdescription">Immerse yourself in stunning visuals with this 30-inch 4K monitor, featuring an impressive resolution of 3840 x 2160 for razor-sharp detail and vivid color accuracy. Perfect for multitasking, gaming, or professional work, its expansive display provides ample screen real estate and an immersive viewing experience. The sleek black design with slim bezels adds a modern touch to any setup, while ergonomic features ensure long-lasting comfort. Equipped with fast refresh rates and multiple connectivity options, this monitor is built for performance and style, making it a must-have for power users.</span>
+        </div>
+        
+
+    </section>
     <hr>
     <footer class="">
 
@@ -99,6 +135,6 @@
 
 
     </footer>
-    <!--This is a comment -->
+    <script src="monitorscript.js"></script>
 </body>
 </html>
