--- a/productspage/pagescode/monitorscode/monitors-4K25.html
+++ b/productspage/pagescode/monitorscode/monitors-4K25.html
@@ -27,6 +27,43 @@
         </div>
     </section>
     <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="Monitors/25inch/4k-25-black.webp" width ="100%" id="normal" alt ="">
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="Monitors/25inch/4k-25-black.webp" width="100%" class="smallimg" id="black">
+                </div>
+                <div class="secimagescols">
+                    <img src="Monitors/25inch/4k-25-White.webp" width="100%" class="smallimg" id="white">
+                </div>
+
+            </div>
+        </div>
+        <div class="maindescription">
+            <br>
+           <h4 id="pname">25 Inch Black Monitor 4K</h4>
+           <br>
+           <h2 id="pprice"><del>£199.99</del> £149.99 </h2>
+           <br>
+           <select id="colourselector"> 
+            <option value="Black">Black </option>
+            <option value="White">White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4 id="pdescriptionheading" >Product Description: 25 Inch Black Monitor 4k</h4>
+           <br>
+           <span id="pdescription">Discover extraordinary detail with this 25-inch 4K monitor, boasting an ultra-high-definition resolution of 3840 x 2160. Perfect for professionals, gamers, and content creators, it delivers breathtaking clarity and vibrant colors for an unmatched viewing experience. The sleek black design complements any setup, while its compact size ensures it fits seamlessly into any workspace. With advanced connectivity options and smooth performance, this monitor is a powerful blend of style and functionality, ideal for those who demand exceptional quality.</span>
+        </div>
+        
+
+    </section>
 
     <hr>
     <footer class="">
@@ -99,6 +136,6 @@
 
 
     </footer>
-    <!--This is a comment -->
+    <script src="monitorscript.js"></script>
 </body>
 </html>
