made monitors basket pages

--- a/productspage/pagescode/monitorscode/monitors-2K25.html
+++ b/productspage/pagescode/monitorscode/monitors-2K25.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="monitorstyle.css">
 </head>
-<body model="i2k25">
+<body data-model="i2k25">
     <section id="header">
         <a href="#"><img src="Faveicon.jpg"class="logo"height="80"alt="logo"></a>
         <div>
