--- a/aboutuspage/aboutus.html
+++ b/aboutuspage/aboutus.html
@@ -180,7 +180,7 @@
 
       <section id="about">
         <div class="section-bg">
-          <a href="contactus.html">
+          <a href="/contactuspage/contactus.html">
             <button>Contact Us</button>
           </a>
         </div>
