--- a/productspage/pagescode/laptopscode/laptops-16C.html
+++ b/productspage/pagescode/laptopscode/laptops-16C.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="laptopstyle.css">
 </head>
-<body>
+<body data-model="c16">
     <section id="header">
         <a href="#"><img src="Faveicon.jpg"class="logo"height="80"alt="logo"></a>
         <div>
@@ -27,6 +27,46 @@
         </div>
     </section>
     <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
+
+
+
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="Laptops/16inch/Chromebook-16-Black.webp" width ="100%" id="normal" alt ="">
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="Laptops/16inch/Chromebook-16-Black.webp" width="100%" class="smallimg" id="black">
+                </div>
+                <div class="secimagescols">
+                    <img src="Laptops/16inch/Chromebook-16-white.webp" width="100%" class="smallimg" id="white">
+                </div>
+
+            </div>
+        </div>
+        <div class="maindescription">
+            <br>
+           <h4 id="pname">16 inch Black Chromebook</h4>
+           <br>
+           <h2 id="pprice"><del>£449.99</del> £399.99     </h2>
+           <br>
+           <select id="colourselector"> 
+            <option value="Black">Black </option>
+            <option value="White">White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4 id="pdescriptionheading" >Product Description: 16 inch Black Chromebook</h4>
+           <br>
+           <span id="pdescription">The 16-Inch Chromebook in black combines affordability with a spacious display for an enhanced user experience. Ideal for students, professionals, and casual users, this laptop runs Chrome OS for fast, seamless browsing and app usage. The large 16-inch display offers sharp visuals, while the lightweight build makes it portable and convenient. Encased in a sleek black finish, this Chromebook is as stylish as it is functional.</span>
+        </div>
+        
+
+    </section>
 
     <hr>
     <footer class="">
@@ -99,6 +139,6 @@
 
 
     </footer>
-    <!--This is a comment -->
+    <script src="laptopscript.js"></script>
 </body>
 </html>
