--- a/productspage/pagescode/laptopscode/laptops-16P.html
+++ b/productspage/pagescode/laptopscode/laptops-16P.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="laptopstyle.css">
 </head>
-<body>
+<body data-model="p16">
     <section id="header">
         <a href="#"><img src="Faveicon.jpg"class="logo"height="80"alt="logo"></a>
         <div>
@@ -27,6 +27,46 @@
         </div>
     </section>
     <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
+
+
+
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="Laptops/16inch/Probook-16-black.webp" width ="100%" id="normal" alt ="">
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="Laptops/16inch/Probook-16-black.webp" width="100%" class="smallimg" id="black">
+                </div>
+                <div class="secimagescols">
+                    <img src="Laptops/16inch/Probook-16-white.webp" width="100%" class="smallimg" id="white">
+                </div>
+
+            </div>
+        </div>
+        <div class="maindescription">
+            <br>
+           <h4 id="pname">16 inch Black Probook</h4>
+           <br>
+           <h2 id="pprice"><del>£499.99</del> £449.99     </h2>
+           <br>
+           <select id="colourselector"> 
+            <option value="Black">Black </option>
+            <option value="White">White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4 id="pdescriptionheading" >Product Description: 16 inch Black Probook</h4>
+           <br>
+           <span id="pdescription">The 16-Inch Probook in black is built for professionals who need powerful performance in a sleek package. Featuring a large, high-resolution display, this laptop is perfect for intensive tasks like video editing, 3D modeling, or software development. Its robust hardware and ergonomic design ensure smooth multitasking and long-term comfort. The black finish adds a sophisticated, professional look to a laptop that means business.</span>
+        </div>
+        
+
+    </section>
 
     <hr>
     <footer class="">
@@ -99,6 +139,6 @@
 
 
     </footer>
-    <!--This is a comment -->
+    <script src="laptopscript.js"></script>
 </body>
 </html>
