--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -338,9 +338,10 @@
         </h1>
         <p>
           Discover unbeatable deals on the latest electronic gadgets at Device
-          Direct! <br />Whether you're upgrading your smartphone, enhancing your
-          home office, or looking for the perfect gift, our collection has
-          something for everyone.
+          Direct! <br />Whether you're upgrading your smartphone, buying the
+          latest gaming console,<br />
+          or looking for the perfect gift, our collection has something for
+          everyone.
         </p>
         <div class="btn">
           <a href="/productspage/index.html"> <button>Shop Now</button></a>
