consoles basket page completed(can now select colour on this page)

--- a/productspage/pagescode/consolescode/ps5.html
+++ b/productspage/pagescode/consolescode/ps5.html
@@ -33,25 +33,25 @@
 
     <section id="details" class="diffitems">
         <div class="mainimage">
-            <img src="Consoles/PS4/PS4-black.webp" width ="100%" id="normal" alt ="">
+            <img src="Consoles/PS5/s5black.webp" width ="100%" id="normal" alt ="">
             <div class="secimages">
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4-black.webp" width="100%" class="smallimg" id="black">
+                    <img src="Consoles/PS5/s5black.webp" width="100%" class="smallimg" id="black">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 white.webp" width="100%" class="smallimg" id="white">
+                    <img src="Consoles/PS5/PS5 White.webp" width="100%" class="smallimg" id="white">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 red.webp" width="100%" class="smallimg" id="red">
+                    <img src="Consoles/PS5/PS5 red.webp" width="100%" class="smallimg" id="red">
                 </div>
 
             </div>
         </div>
         <div class="maindescription">
             <br>
-           <h4 id="pname">Black PS4</h4>
+           <h4 id="pname">Black PS5</h4>
            <br>
-           <h2 id="pprice"><del>£199.99</del> £99.99 </h2>
+           <h2 id="pprice"><del>£249.99</del> £149.99 </h2>
            <br>
            <select id="colourselector"> 
             <option value="Black">Black </option>
@@ -64,9 +64,9 @@
            <button class="cartclass">Add to Cart</button>
            <br>
            <br>
-           <h4 id="pdescriptionheading" >Product Description: Black PS4</h4>
+           <h4 id="pdescriptionheading" >Product Description: Black PS5</h4>
            <br>
-           <span id="pdescription">The black PlayStation 4 delivers cutting-edge graphics and powerful performance in a sleek, modern package. Whether you’re diving into epic single-player campaigns or competing in fast-paced multiplayer matches, the PS4 ensures smooth gameplay and immersive visuals. Its expansive library includes critically acclaimed titles, catering to gamers of all interests. The console’s compact and stylish design fits seamlessly into any setup, while its intuitive interface and robust hardware make it a reliable choice for casual and hardcore gamers alike.</span>
+           <span id="pdescription">The black PlayStation 5 is a next-gen powerhouse that redefines gaming with its sleek design and groundbreaking performance. Featuring lightning-fast SSD storage, stunning 4K graphics, and immersive DualSense controller technology, the PS5 delivers unmatched gaming experiences. Its bold black finish adds a professional and modern touch, making it a standout addition to any gaming setup. Whether you’re exploring massive open worlds or engaging in intense multiplayer battles, the black PS5 offers flawless performance for every gamer.</span>
         </div>
         
 
