--- a/productspage/pagescode/consolescode/wiiu.html
+++ b/productspage/pagescode/consolescode/wiiu.html
@@ -33,23 +33,23 @@
 
     <section id="details" class="diffitems">
         <div class="mainimage">
-            <img src="Consoles/PS4/PS4-black.webp" width ="100%" id="normal" alt ="">
+            <img src="Consoles/wiiu/wiiublack.webp" width ="100%" id="normal" alt ="">
             <div class="secimages">
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4-black.webp" width="100%" class="smallimg" id="black">
+                    <img src="Consoles/wiiu/wiiublack.webp" width="100%" class="smallimg" id="black">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 white.webp" width="100%" class="smallimg" id="white">
+                    <img src="Consoles/wiiu/Wii U white.webp" width="100%" class="smallimg" id="white">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 red.webp" width="100%" class="smallimg" id="red">
+                    <img src="Consoles/wiiu/Wii U red.webp" width="100%" class="smallimg" id="red">
                 </div>
 
             </div>
         </div>
         <div class="maindescription">
             <br>
-           <h4 id="pname">Black PS4</h4>
+           <h4 id="pname">Black Wii U</h4>
            <br>
            <h2 id="pprice"><del>£199.99</del> £99.99 </h2>
            <br>
@@ -64,9 +64,9 @@
            <button class="cartclass">Add to Cart</button>
            <br>
            <br>
-           <h4 id="pdescriptionheading" >Product Description: Black PS4</h4>
+           <h4 id="pdescriptionheading" >Product Description: Black Wii U</h4>
            <br>
-           <span id="pdescription">The black PlayStation 4 delivers cutting-edge graphics and powerful performance in a sleek, modern package. Whether you’re diving into epic single-player campaigns or competing in fast-paced multiplayer matches, the PS4 ensures smooth gameplay and immersive visuals. Its expansive library includes critically acclaimed titles, catering to gamers of all interests. The console’s compact and stylish design fits seamlessly into any setup, while its intuitive interface and robust hardware make it a reliable choice for casual and hardcore gamers alike.</span>
+           <span id="pdescription">Step into the next generation of gaming with the black Wii U, a console that combines high-definition visuals with innovative gameplay. Featuring the groundbreaking GamePad controller with a touchscreen, the Wii U opens up new ways to interact with games, offering dual-screen functionality and enhanced immersion. The sleek black design adds a touch of sophistication, making it a stylish centerpiece for your entertainment setup. Enjoy an extensive library of titles, from family-friendly classics to action-packed adventures, all designed to take advantage of the console’s unique capabilities. Whether you’re playing solo or with friends, the black Wii U is your gateway to unforgettable gaming experiences.</span>
         </div>
         
 
