--- a/productspage/pagescode/consolescode/nintendowii.html
+++ b/productspage/pagescode/consolescode/nintendowii.html
@@ -33,23 +33,23 @@
 
     <section id="details" class="diffitems">
         <div class="mainimage">
-            <img src="Consoles/PS4/PS4-black.webp" width ="100%" id="normal" alt ="">
+            <img src="Consoles/wii/wiiblack.webp" width ="100%" id="normal" alt ="">
             <div class="secimages">
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4-black.webp" width="100%" class="smallimg" id="black">
+                    <img src="Consoles/wii/wiiblack.webp" width="100%" class="smallimg" id="black">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 white.webp" width="100%" class="smallimg" id="white">
+                    <img src="Consoles/wii/Wii white.webp" width="100%" class="smallimg" id="white">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 red.webp" width="100%" class="smallimg" id="red">
+                    <img src="Consoles/wii/Wii red.webp" width="100%" class="smallimg" id="red">
                 </div>
 
             </div>
         </div>
         <div class="maindescription">
             <br>
-           <h4 id="pname">Black PS4</h4>
+           <h4 id="pname">Black Wii</h4>
            <br>
            <h2 id="pprice"><del>£199.99</del> £99.99 </h2>
            <br>
@@ -64,9 +64,9 @@
            <button class="cartclass">Add to Cart</button>
            <br>
            <br>
-           <h4 id="pdescriptionheading" >Product Description: Black PS4</h4>
+           <h4 id="pdescriptionheading" >Product Description: Black Wii</h4>
            <br>
-           <span id="pdescription">The black PlayStation 4 delivers cutting-edge graphics and powerful performance in a sleek, modern package. Whether you’re diving into epic single-player campaigns or competing in fast-paced multiplayer matches, the PS4 ensures smooth gameplay and immersive visuals. Its expansive library includes critically acclaimed titles, catering to gamers of all interests. The console’s compact and stylish design fits seamlessly into any setup, while its intuitive interface and robust hardware make it a reliable choice for casual and hardcore gamers alike.</span>
+           <span id="pdescription">Rediscover the joy of gaming with the iconic black Wii, a console that revolutionized home entertainment with its motion-based gameplay and intuitive controls. The sleek black finish adds a modern and sophisticated touch to any gaming setup, making it a standout addition to your entertainment space. Dive into a vast library of family-friendly games, from action-packed adventures to fitness challenges, all designed to bring people together. Whether you’re hosting a game night or enjoying solo play, the black Wii promises endless hours of fun with immersive and interactive gaming experiences.</span>
         </div>
         
 
