--- a/productspage/pagescode/consolescode/switch.html
+++ b/productspage/pagescode/consolescode/switch.html
@@ -33,25 +33,25 @@
 
     <section id="details" class="diffitems">
         <div class="mainimage">
-            <img src="Consoles/PS4/PS4-black.webp" width ="100%" id="normal" alt ="">
+            <img src="Consoles/switch/switchblack.webp" width ="100%" id="normal" alt ="">
             <div class="secimages">
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4-black.webp" width="100%" class="smallimg" id="black">
+                    <img src="Consoles/switch/switchblack.webp" width="100%" class="smallimg" id="black">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 white.webp" width="100%" class="smallimg" id="white">
+                    <img src="Consoles/switch/Switch white.webp" width="100%" class="smallimg" id="white">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 red.webp" width="100%" class="smallimg" id="red">
+                    <img src="Consoles/switch/switch red.webp" width="100%" class="smallimg" id="red">
                 </div>
 
             </div>
         </div>
         <div class="maindescription">
             <br>
-           <h4 id="pname">Black PS4</h4>
+           <h4 id="pname">Black Nintendo Switch</h4>
            <br>
-           <h2 id="pprice"><del>£199.99</del> £99.99 </h2>
+           <h2 id="pprice"><del>£249.99</del> £149.99 </h2>
            <br>
            <select id="colourselector"> 
             <option value="Black">Black </option>
@@ -64,9 +64,9 @@
            <button class="cartclass">Add to Cart</button>
            <br>
            <br>
-           <h4 id="pdescriptionheading" >Product Description: Black PS4</h4>
+           <h4 id="pdescriptionheading" >Product Description: Black Nintendo Switch</h4>
            <br>
-           <span id="pdescription">The black PlayStation 4 delivers cutting-edge graphics and powerful performance in a sleek, modern package. Whether you’re diving into epic single-player campaigns or competing in fast-paced multiplayer matches, the PS4 ensures smooth gameplay and immersive visuals. Its expansive library includes critically acclaimed titles, catering to gamers of all interests. The console’s compact and stylish design fits seamlessly into any setup, while its intuitive interface and robust hardware make it a reliable choice for casual and hardcore gamers alike.</span>
+           <span id="pdescription">The black Nintendo Switch combines portability and versatility in a sleek, modern design. Whether you’re playing on the go or docking it for big-screen action, the Switch delivers a seamless gaming experience that adapts to your lifestyle. Its ergonomic Joy-Con controllers provide precision and comfort, while the vibrant display ensures crystal-clear visuals for handheld gaming. With a diverse library of games, including action-packed adventures, puzzles, and party games, the black Switch is perfect for solo players and groups alike. Its stylish black finish adds a professional touch, making it a must-have for gamers who value performance and aesthetics.</span>
         </div>
         
 
