--- a/productspage/pagescode/consolescode/xbox1.html
+++ b/productspage/pagescode/consolescode/xbox1.html
@@ -33,23 +33,24 @@
 
     <section id="details" class="diffitems">
         <div class="mainimage">
-            <img src="Consoles/PS4/PS4-black.webp" width ="100%" id="normal" alt ="">
+
+            <img src="Consoles/xbox/xboxblack.webp" width ="100%" id="normal" alt ="">
             <div class="secimages">
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4-black.webp" width="100%" class="smallimg" id="black">
+                    <img src="Consoles/xbox/xboxblack.webp" width="100%" class="smallimg" id="black">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 white.webp" width="100%" class="smallimg" id="white">
+                    <img src="Consoles/xbox/white.webp" width="100%" class="smallimg" id="white">
                 </div>
                 <div class="secimagescols">
-                    <img src="Consoles/PS4/PS4 red.webp" width="100%" class="smallimg" id="red">
+                    <img src="Consoles/xbox/red.webp" width="100%" class="smallimg" id="red">
                 </div>
-
             </div>
+
         </div>
         <div class="maindescription">
             <br>
-           <h4 id="pname">Black PS4</h4>
+           <h4 id="pname">Black XBox 1</h4>
            <br>
            <h2 id="pprice"><del>£199.99</del> £99.99 </h2>
            <br>
@@ -64,9 +65,9 @@
            <button class="cartclass">Add to Cart</button>
            <br>
            <br>
-           <h4 id="pdescriptionheading" >Product Description: Black PS4</h4>
+           <h4 id="pdescriptionheading" >Product Description: Black XBox 1</h4>
            <br>
-           <span id="pdescription">The black PlayStation 4 delivers cutting-edge graphics and powerful performance in a sleek, modern package. Whether you’re diving into epic single-player campaigns or competing in fast-paced multiplayer matches, the PS4 ensures smooth gameplay and immersive visuals. Its expansive library includes critically acclaimed titles, catering to gamers of all interests. The console’s compact and stylish design fits seamlessly into any setup, while its intuitive interface and robust hardware make it a reliable choice for casual and hardcore gamers alike.</span>
+           <span id="pdescription">The black Xbox is a powerhouse designed for serious gamers, offering next-gen performance and a sleek, modern aesthetic. With support for 4K gaming, lightning-fast load times, and advanced hardware, it delivers an immersive experience across a wide range of titles. Its bold black finish adds a professional touch to any setup, while its seamless online connectivity ensures smooth multiplayer gameplay. Whether you’re streaming, gaming, or exploring expansive open worlds, the black Xbox delivers flawless performance.</span>
         </div>
         
 
