--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -153,9 +153,9 @@
       <div class="row" style="margin-top: 30px">
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
-            <img src="./assests/images/p6.png" alt="" />
+            <img src="./assests/images/samsung tv.jpeg" alt="" />
             <div class="card-body">
-              <h3 class="text-center">Iphone 13 pro</h3>
+              <h3 class="text-center">Samsung S95D 65" OLED 2024</h3>
               <h2>
                 £1000 <span><li class="fa-solid fa-cart-shopping"></li></span>
               </h2>
