Added Navbar and improved styling

--- a/previousorders/previousorders.html
+++ b/previousorders/previousorders.html
@@ -5,17 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Previous Orders</title>
     <link rel="stylesheet" href="previousorders.css"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
  
 </head>
 <body>
-    <div class="top-navbar">
-        <p>Welcome, User!</p>
-        <div class="icons">
-            <a href="#"><img src="icon.png" alt="Icon"></a>
-            <a href="#">Logout</a>
-        </div>
+  <section id="header">
+    <a href="#"><img src="Logo/Logo.jpg"class="logo"height="80"alt="logo"></a>
+    <div>
+        <ul id="Navbar">
+            <li><a class = "active" href="../contactuspage/contactus.html">Contact Us</a></li>
+            <li><a class="active" href="../landingpage/landingpage.html">Home</a></li>
+            <li><a class = "active" href="../aboutuspage/aboutus.html">About Us</a></li>
+            <li><a class = "active" href="../signup/signup.html">Sign Up</a></li>
+            <li><a class = "active"href="">Log in</a></li>
+            <li><a class = "active"href="../">Previous Orders</a></li>
+            <li><a class = "active"href="">Checkout</a></li>
+            <li><a class = "active"href="index.html">Search</a></li>
+            <li><a href="../checkoutpage/cart.html" class = "active"><i class="far fa-shopping-bag"></i></a></li>
+
+
+        </ul>
     </div>
-    <h1>Your Previous Orders</h1>
+</section>
+ 
     <table>
         <thead>
             <tr>
