--- a/contactuspage/contactus.html
+++ b/contactuspage/contactus.html
@@ -7,6 +7,44 @@
   <link rel="icon" type="image/jpg" href="categoryimages/Faveicon.jpg">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Modal styles */
+    #modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+    #modalContent {
+      background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      text-align: center;
+      width: 300px;
+    }
+    #modalContent h2 {
+      margin: 0;
+    }
+    #modalContent p {
+      margin: 10px 0;
+    }
+    .btn-close {
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .btn-close:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
   <section id="header">
@@ -31,7 +69,7 @@
       <div class="container">
         <h2>Contact Us</h2>
         <p>Have questions or need assistance? Reach out to us using the form below.</p>
-        <form action="#" method="post">
+        <form id="contactForm" action="#" method="post">
           <div class="form-group">
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" placeholder="Enter your full name" required>
@@ -96,5 +134,45 @@
       </div>
     </div>
   </footer>
+
+  <!-- Modal for Success Message -->
+  <div id="modal">
+    <div id="modalContent">
+      <h2>Thank You!</h2>
+      <p>Your message has been successfully sent.</p>
+      <p><strong>We'll get back to you soon.</strong></p>
+      <button class="btn-close" id="closeModal">Close</button>
+    </div>
+  </div>
+
+  <script>
+    document.getElementById("contactForm").addEventListener("submit", function (e) {
+      e.preventDefault(); // Prevent form submission
+
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const message = document.getElementById("message").value;
+
+      // Show the modal with the user's data
+      document.getElementById("modal").style.display = "flex";
+      document.getElementById("modalContent").innerHTML = `
+        <h2>Thank You, ${name}!</h2>
+        <p>Your message has been received.</p>
+        <p><strong>Email:</strong> ${email}</p>
+        <p><strong>Message:</strong> ${message}</p>
+        <button class="btn-close" id="closeModal">Close</button>
+      `;
+
+      // Reset the form
+      document.getElementById("contactForm").reset();
+    });
+
+    // Close the modal
+    document.getElementById("modal").addEventListener("click", function (e) {
+      if (e.target === document.getElementById("modal") || e.target.id === "closeModal") {
+        document.getElementById("modal").style.display = "none";
+      }
+    });
+  </script>
 </body>
 </html>
