--- a/aboutuspage/aboutus.html
+++ b/aboutuspage/aboutus.html
@@ -139,11 +139,13 @@
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Usefull Links</h4>
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Terms of service</a></li>
-                <li><a href="#">Privacy policy</a></li>
+                <li><a href="/Landing-Page/index.html">Home</a></li>
+                <li><a href="/aboutuspage/aboutus.html">About Us</a></li>
+                <li><a href="/loginpage/login.html">Account</a></li>
+                <li>
+                  <a href="/productspage/index.html">Shop Now</a>
+                </li>
+                <li><a href="/contactuspage/contactus.html">Contact Us</a></li>
               </ul>
             </div>
 
@@ -151,11 +153,30 @@
               <h4>Our Services</h4>
 
               <ul>
-                <li><a href="#">PS 5</a></li>
-                <li><a href="#">Computer</a></li>
-                <li><a href="#">Gaming Laptop</a></li>
-                <li><a href="#">Mobile Phone</a></li>
-                <li><a href="#">Gaming Gadget</a></li>
+                <li>
+                  <a href="/productspage/pagescode/consolescode/consoles.html"
+                    >Gaming Consoles</a
+                  >
+                </li>
+                <li>
+                  <a href="/productspage/pagescode/tvcode/tvs.html">TVs</a>
+                </li>
+                <li>
+                  <a href="/productspage/pagescode/laptopscode/laptops.html"
+                    >Laptops</a
+                  >
+                </li>
+                <li>
+                  <a href="/productspage/pagescode/monitorscode/monitors.html"
+                    >Monitors</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/productspage/pagescode/headphonescode/headphones.html"
+                    >Headphones</a
+                  >
+                </li>
               </ul>
             </div>
 
