--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -90,11 +90,11 @@
                 style="background-color: rgb(67 0 86)"
               >
                 <li>
-                  <a class="dropdown-item" href="/loginpage/login.html"
+                  <a class="dropdown-item" href="/Login page/login.html"
                     >Login</a
                   >
                 </li>
-                <li><a class="dropdown-item" href="#">SignUp</a></li>
+                <li><a class="dropdown-item" href="/Login page/signup.html">SignUp</a></li>
                 <li>
                   <a
                     class="dropdown-item"
