--- a/checkoutpage/cart.html
+++ b/checkoutpage/cart.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style_cart.css">
-    <title></title>
+    <title>Checkout</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
      <!-- bootstrap links -->
      <link
@@ -243,5 +243,11 @@
           </div>
         </div>
       </footer>
+
+      <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     </body>
 </html>
