--- a/aboutuspage/aboutus.html
+++ b/aboutuspage/aboutus.html
@@ -177,7 +177,7 @@
       <h3><i class="fas fa-envelope"></i> Get in Touch</h3>
       <p>We'd love to hear from you! Click the button below to get started.</p>
       <div class="section-bg">
-        <a href="contactus.html">
+        <a href="/contactuspage/contactus.html">
           <button>Contact Us</button>
         </a>
       </div>
