created a search bar not fully functinal

--- a/productspage/index.html
+++ b/productspage/index.html
@@ -153,9 +153,13 @@
       <section class="searchsection">
         <form>
           <img src="../productspage/categoryimages/search.png" />
-          <input type="text" placeholder="Search" id="inputsearch" />
+          <input type="text" placeholder="Search" id="inputsearch" autocomplete="off" />
+          
         </form>
       </section>
+      <div class="optionbox">
+      </div>
+
     </div>
 
     <h3
