--- a/checkoutpage/checkout.html
+++ b/checkoutpage/checkout.html
@@ -119,19 +119,62 @@
      </div>
    </nav>
 
-    <div class="checkout-container">
-        <h1>Checkout</h1>
-
-
-        <form action="">
-                <input type="text" placeholder="Name on card" required>
-                <input type="text" placeholder="Card number" required>
-                <input type="text" placeholder="Account number" required>
-                <input type="text" placeholder="Expiry date" required>
-                <input type="text" placeholder="CVC" required>
-        </form>
-
+     <!-- Checkout Form -->
+     <div class="container my-5">
+      <h1 class="text-center mb-4">Checkout</h1>
+      <form>
+        <!-- Billing Information -->
+        <div class="mb-4">
+          <h3>Billing Information</h3>
+          <div class="row g-3">
+            <div class="col-md-6">
+              <label for="billingFirstName" class="form-label">First Name</label>
+              <input type="text" class="form-control" id="billingFirstName" placeholder="First name" required>
+            </div>
+            <div class="col-md-6">
+              <label for="billingLastName" class="form-label">Last Name</label>
+              <input type="text" class="form-control" id="billingLastName" placeholder="Surname" required>
+            </div>
+            <div class="col-12">
+              <label for="billingAddress" class="form-label">Address</label>
+              <input type="text" class="form-control" id="billingAddress" placeholder="Enter address" required>
+            </div>
+            <div class="col-md-6">
+              <label for="billingCity" class="form-label">City</label>
+              <input type="text" class="form-control" id="billingCity" placeholder="City" required>
+            </div>
+            <div class="col-md-6">
+              <label for="billingPostalCode" class="form-label">Postal Code</label>
+              <input type="text" class="form-control" id="billingPostalCode" placeholder="XX00 0XX" required>
+            </div>
+          </div>
         </div>
+
+        <div class="mb-4">
+          <h3>Payment Details</h3>
+          <div class="row g-3">
+            <div class="col-md-6">
+              <label for="cardName" class="form-label">Name on Card</label>
+              <input type="text" class="form-control" id="cardName" placeholder="Full name" required>
+            </div>
+            <div class="col-md-6">
+              <label for="cardNumber" class="form-label">Card Number</label>
+              <input type="text" class="form-control" id="cardNumber" placeholder="16 digit code" required>
+            </div>
+            <div class="col-md-4">
+              <label for="expiryDate" class="form-label">Expiry Date</label>
+              <input type="text" class="form-control" id="expiryDate" placeholder="MM/YY" required>
+            </div>
+            <div class="col-md-4">
+              <label for="cvc" class="form-label">CVC</label>
+              <input type="text" class="form-control" id="cvc" placeholder="3 digit code" required>
+            </div>
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Place Order</button>
+      </form>
+    </div>
     <footer class="">
 
         <footer id="footer">
