Fully functional search bar

--- a/productspage/index.html
+++ b/productspage/index.html
@@ -154,12 +154,9 @@
         <form>
           <img src="../productspage/categoryimages/search.png" />
           <input type="text" placeholder="Search" id="inputsearch" autocomplete="off" />
-          
         </form>
+        <div class="optionbox"></div>
       </section>
-      <div class="optionbox">
-      </div>
-
     </div>
 
     <h3
