--- a/productspage/pagescode/consolescode/nintendowii.html
+++ b/productspage/pagescode/consolescode/nintendowii.html
@@ -197,7 +197,7 @@
         <input type="number" value="1" />
         <br />
         <br />
-        <button class="cartclass">Add to Cart</button>
+        <a href="../../../checkoutpage/cart.html"><button class="cartclass">Add to Cart</button></a>
         <br />
         <br />
         <h4 id="pdescriptionheading">Product Description: Black Wii</h4>
