--- a/productspage/pagescode/consolescode/xbox1.html
+++ b/productspage/pagescode/consolescode/xbox1.html
@@ -202,7 +202,7 @@
         <input type="number" value="1" />
         <br />
         <br />
-        <button class="cartclass">Add to Cart</button>
+        <a href="../../../checkoutpage/cart.html"><button class="cartclass">Add to Cart</button></a>
         <br />
         <br />
         <h4 id="pdescriptionheading">Product Description: Black XBox 1</h4>
