--- a/productspage/pagescode/laptopscode/laptops-12A.html
+++ b/productspage/pagescode/laptopscode/laptops-12A.html
@@ -194,7 +194,7 @@
         <input type="number" value="1" />
         <br />
         <br />
-        <button class="cartclass">Add to Cart</button>
+        <a href="../../../checkoutpage/cart.html"><button class="cartclass">Add to Cart</button></a>
         <br />
         <br />
         <h4 id="pdescriptionheading">
