--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -489,9 +489,9 @@
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Our Social</h4>
               <div class="socail-links mt-3">
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://x.com/"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
               </div>
             </div>
           </div>
