--- a/previousorders/previousorders.html
+++ b/previousorders/previousorders.html
@@ -1,113 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DeviceDirect</title>
-    <link rel="stylesheet" href="/previousorders/previousorders.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
-    <!-- bootstrap links -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <!-- bootstrap links -->
-    <!-- fonts links -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap"
-      rel="stylesheet"
-    />
-    <!-- fonts links -->
-  </head>
-  <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg" id="navbar">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html" id="logo">
-          <img
-            src="/Landing-Page/assests/images/device_direct_logo.png"
-            alt="Device Direct Logo"
-            class="logo-img"
-          />
-          <span id="span1">D</span>evice <span>Direct</span></a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span
-            ><img src="./assests/images/menu.png" alt="" width="30px"
-          /></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/Landing-Page/index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/productspage/index.html">Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/aboutuspage/aboutus.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contactuspage/contactus.html"
-                >Contact</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Account
-              </a>
-              <ul
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdown"
-                style="background-color: rgb(67 0 86)"
-              >
-                <li>
-                  <a class="dropdown-item" href="/Login page/login.html"
-                    >Login</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/Login page/signup.html"
-                    >SignUp</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="/previousorders/previousorders.html"
-                    >Previous Orders</a
-                  >
-                </li>
-              </ul>
-            </li>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Previous Orders</title>
+    <link rel="stylesheet" href="previousorders.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    
+</head>
+<body>
+    <!-- Navbar -->
+    <section id="header">
+      <a href="#"><img src="categoryimages/Faveicon.jpg"class="logo"height="80"alt="logo"></a>
+      <div>
+          <ul id="Navbar">
+              <li><a class = "active" href="../contactuspage/contactus.html">Contact Us</a></li>
+              <li><a class="active" href="../landingpage/landingpage.html">Home</a></li>
+              <li><a class = "active" href="../aboutuspage/aboutus.html">About Us</a></li>
+              <li><a class = "active" href="../signup/signup.html">Sign Up</a></li>
+              <li><a class = "active"href="">Log in</a></li>
+              <li><a class = "active"href="../">Previous Orders</a></li>
+              <li><a class = "active"href="">Checkout</a></li>
+              <li><a class = "active"href="index.html">Search</a></li>
+              <li><a href="../checkoutpage/cart.html" class = "active"><i class="far fa-shopping-bag"></i></a></li>
+
+
           </ul>
           <form class="d-flex" id="search">
             <input
